--- a/src/input.css
+++ b/src/input.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -6,7 +7,7 @@
 
 /* Custom styles */
 body {
-  font-family: "Work Sans", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 
 
