--- a/src/input.css
+++ b/src/input.css
@@ -29,7 +29,7 @@ body {
 /* Custom component styles */
 @layer components {
   .btn-primary {
-    @apply bg-pink-600 text-white px-8 py-3 rounded-lg font-semibold shadow hover:bg-pink-700 transition;
+    @apply bg-[#f1453d] py-4 px-6 rounded-[40px] text-white text-base font-normal cursor-pointer transition hover:bg-red-800;
   }
 
   .btn-secondary {
